<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BulletZoneClient</string>
    <string name="action_settings">Settings</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="right">RIGHT</string>
    <string name="left">LEFT</string>
    <string name="fire">FIRE</string>
    <string name="join">JOIN</string>
    <string name="leave">LEAVE</string>
    <string name="action">ACTION</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="griditem">GridItem</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="LogInBeforePlayingMessage">Log in before playing!</string>
    <string name="terrain" />
    <string name="item">item</string>
    <string name="vehicle">vehicle</string>
    <string-array name="vehicles_array">
        <item>Tank</item>
        <item>Miner</item>
        <item>Builder</item>
    </string-array>
    <string-array name="boards_array">
        <item>Top</item>
        <item>Middle</item>
        <item>Bottom</item>
    </string-array>

</resources>